--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trillo",
   "version": "1.0.0",
   "private": true,
-  "description": "Landing page for trillo",
+  "description": "trillo app",
   "main": "index.js",
   "browserslist": "last 10 versions",
   "scripts": {
@@ -10,10 +10,9 @@
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
-    "prefix:css": "postcss css/style.concat.css -u autoprefixer -o css/style.prefix.css",
+    "prefix:css": "postcss css/style.comp.css -u autoprefixer -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "author": "Maulik",
   "license": "ISC",
