--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "main": "index.js",
   "browserslist": "last 10 versions",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css --watch",
     "devserver": "live-server",
+    "watch:sass1": "nodemon -e scss -x \"npm run compile:sass\"",
     "start": "npm-run-all --parallel devserver watch:sass",
+    "watch:sass": "node-sass sass/main.scss css/style.css --watch",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "compile:sass1": "node-sass sass/main.scss css/style.css",
     "prefix:css": "postcss css/style.comp.css -u autoprefixer -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
@@ -20,6 +22,7 @@
     "autoprefixer": "^10.4.0",
     "concat": "^1.0.3",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.11",
     "postcss-cli": "^9.0.2"
